NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissioning_Weekly_Log__c/CONTAINER_Commissioning_Weekly_Log__c.object-meta.xml
<CustomObject>
    <description>his Object is being used for CONTAINER Commissioning Weekly Logs</description>
    <label>Commissioning Weekly Log</label>
    <nameField>
        <displayFormat>CWO-{0000}</displayFormat>
        <label>Commissioning Weekly Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commissioning Weekly Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>