NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissioning_Weekly_Log__c/fields/CONTAINER_Commissioning_To_Date__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Commissioning_To_Date__c</fullName>
    <description>This Field is to capture commissioning To date</description>
    <label>Commissioning To Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>