NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissioning_Weekly_Log__c/fields/CONTAINER_Commissioning_WL__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Commissioning_WL__c</fullName>
    <description>Master detail relationship between Commissioning object and Commissioning Weekly Log object.</description>
    <label>Commissioning</label>
    <referenceTo>CONTAINER_Commissionig__c</referenceTo>
    <relationshipLabel>Commissioning Weekly Logs</relationshipLabel>
    <relationshipName>Commissioning_Weekly_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>