NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissioning_Weekly_Log__c/fields/CONTAINER_Failures_To_Date__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Failures_To_Date__c</fullName>
    <description>This Field is to capture Failures to date.</description>
    <label>Failures To Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>