NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissioning_Weekly_Log__c/fields/CONTAINER_Percentage_Failures__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Percentage_Failures__c</fullName>
    <formula>( CONTAINER_Weekly_Failures__c /  CONTAINER_Weekly_Total__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage Failures</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>