NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissioning_Weekly_Log__c/fields/CONTAINER_Remarks__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Remarks__c</fullName>
    <label>Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>