NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissioning_Weekly_Log__c/fields/CONTAINER_Week__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Week__c</fullName>
    <label>Week#</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>