NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissioning_Weekly_Log__c/fields/CONTAINER_Weekly_Failures__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Weekly_Failures__c</fullName>
    <description>This Field is to capture Weekly Failures.</description>
    <label>Weekly Failures</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>