NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissioning_Weekly_Log__c/fields/CONTAINER_Weekly_Total__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Weekly_Total__c</fullName>
    <description>This Field is to capture Weekly total.</description>
    <label>Weekly Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>